testing mobile playability

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             <!-- Letters guessed -->
             <div id="wrongLetters">
             </div>
+            
+            <div id="playOnMobile">
+                <br>
+                <button type="button" onclick="getFocus()">On mobile? Click here to begin!</button>
+                <br><br>
+                <input type="text" class="form-control has-error" id="myTextField" value="">
+            </div>
 
         </div>
 
