--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
             <div id="playOnMobile">
                 <br>
-                <button type="button" onclick="getFocus()">On mobile? Click here to begin!</button>
+                <button type="button" onclick="getFocus()">(beta) On mobile? Click here!</button>
                 <br><br>
                 <input type="text" class="form-control has-error" id="myTextField" value="">
             </div>
