updated button text and enabled display of completed puzzle word

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             
             <div id="playOnMobile">
                 <br>
-                <button type="button" onclick="getFocus()">(beta) On mobile? Click here!</button>
+                <button type="button" onclick="getFocus()">On mobile? Click here & type letters to play!</button>
                 <br><br>
                 <input type="text" class="form-control has-error" id="myTextField" value="">
             </div>
